# PaddleGuardBenchmark

./: .gitignore  Justfile  pyproject.toml
.benchmarks/Linux-CPython-3.12-64bit/: 0001_20241109.json  0002_20241109.json  0003_20241110.json  0004_20241111.json  0005_20241112.json
.github/workflows/: test.yml
src/utils/: __init__.py  benchmark.py
tests/: test_simple.py
